aligned labels in tree and modified line drawing to fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,9 @@
         }
 
         .hidden {
-            display: none;
+            /* display: none; */
+            visibility: hidden;
+            height: 1rem;
         }
 
         .faded {
@@ -32,6 +34,8 @@
 
         div {
             padding: 1rem;
+            /* border: 0.1rem solid black; */
+            
         }
 
         #lineContainer {
@@ -57,10 +61,19 @@
 
         }
 
+        #problemConstituent {
+            flex-flow: column wrap;
+        }
+
         .block {
-            display: inline-block;
-            text-align: center;
+            /* display: inline-block; */
+            display: flex;
+            /* justify-content: space-around; */
+            /* text-align: center; */
             white-space: nowrap;
+            /* flex-flow: column wrap; */
+            flex-direction: column;
+            align-items: center;
         }
 
         .wordContainer {
@@ -70,12 +83,12 @@
 
         .labelDiv {
             /* position:absolute; */
-            margin: auto;
+            /* margin: auto; */
             padding: 0;
             width: 5rem;
             /* min-width: 3rem;
             max-width: 20rem; */
-            height: 100%;
+            /* height: 100%; */
             left: 0;
             top: 0;
             /* background-color: rgba(137, 43, 226, 0.208); */
@@ -147,7 +160,12 @@
         .branch {
             /* lines of tree */
             stroke:#454545;
-            stroke-width:2;
+            stroke-width:0.2rem;
             stroke-linecap:round;
+        }
+
+        .container {
+            display:flex;
+            justify-content: center;
         }
 
